2007-08-10  Marcus Brinkmann  <marcus@g10code.de>

	* patches/claws-mail-3.0.0-rc2/01-w32-logo.patch,
	patches/claws-mail-3.0.0-rc2/02-w32-icon.patch,
	patches/claws-mail-3.0.0-rc2/03-smime-plugin.patch,
	patches/claws-mail-3.0.0-rc2/99-auto.patch: New files.
	* Makefile.am (EXTRA_DIST): Add these patches.
	* packages/packages.current: Upgrade claws to 3.0.0-rc2.

	* m4/gpg4win.m4: Check for duplicate packages.

2007-08-06  Werner Koch  <wk@g10code.com>

	* src/gpgwrap.c (build_commandline): Terminate each itenm in the
	array.  Problem found by Moritz Schulte.
	
2007-08-04  Marcus Brinkmann  <marcus@g10code.de>

	* src/g4wihelp.c (service_error, service_create, service_lookup,
	service_start, service_stop, service_delete): New functions.
	* src/inst-dirmngr.nsi: Register and start the service.
	* src/uninst-dirmngr.nsi: Stop and unregister the service.

	* src/inst-sections.nsi: Add dirmngr as dependency for gnupg2, and
	w32pth as dependency for dirmngr.

	* src/Makefile.am (gpg4win_pkg_gnupg2_configure): Add
	--with-pth-prefix.

2007-07-10  Werner Koch  <wk@g10code.com>

	Released 1.1.1.

	* src/Makefile.am (EXTRA_DIST): Remove $(common_nsi).  Add all
	installer scripts explicitly.

	* Makefile.am (EXTRA_DIST): Removed old patches for Sylpheed.
	(AUTOMAKE_OPTIONS): Add no-dist-gzip.

	* src/gpg4win.nsi [GPG4WIN_LIGHT]: Undef gnupg2 and related libs.
	Undef the English novices manual.
	* src/installer-finish.nsi: Delete the link for the English novices
	manual and the claws manual.

	* src/uninst-sylpheed-claws.nsi: Delete the manual even when using
	the lighjt version.  This is to allow updating with a light version.
	* src/uninst-claws-mail.nsi: Ditto.

	* src/installer-finish.nsi: Changed publisher name to "The Gpg4win
	Project".

	* src/gpg4win.nsi: Fixed capitalization of some Gpg4win strings.
	* src/gpg4win-src.nsi: Ditto.

2007-07-09  Werner Koch  <wk@g10code.com>

	* src/uninst-gnupg2.nsi: Need to remove com-certs.pem.
